<?xml version="1.0" encoding="utf-8"?>
<ScrollView tools:context=".MainActivity"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <GridLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/gridLayoutMain"
        android:orientation="vertical">

    <ImageView
        android:layout_height="60dp"
        android:layout_width="60dp"
        android:id="@+id/cotroceniLogo"
        android:src="@drawable/cotroceni"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_row="1"
        android:layout_column="0"/>
    <TextView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/textViewMuzeu"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="90dp"
        android:layout_row="1"
        android:textColor="@color/colorDatePicker"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/muzeuNational"
        android:layout_columnSpan="4"/>
    <TextView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/textViewWelcome"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_row="2"
        android:layout_column="0"
        android:textColor="@color/colorNegru"
        android:textStyle="italic"
        android:textSize="15dp"
        android:text="@string/welcome"
        android:layout_columnSpan="4"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textViewNume"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_row="3"
        android:layout_column="0"
        android:textColor="@color/colorNegru"
        android:textStyle="bold" android:text="@string/nume"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editTextNume"
        android:layout_marginTop="10dp"
        android:layout_row="3"
        android:layout_column="1"
        android:textStyle="italic"
        android:textSize="14dp"
        android:hint="@string/hintNume"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:id="@+id/textViewEmail"
        android:layout_marginLeft="10dp"
        android:layout_row="4"
        android:layout_column="0"
        android:textColor="@color/colorNegru"
        android:textStyle="bold"
        android:text="@string/email"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editTextEmail"
        android:layout_row="4"
        android:layout_column="1"
        android:textStyle="italic"
        android:textSize="14dp"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:id="@+id/textViewTelefon"
        android:layout_marginLeft="10dp"
        android:layout_row="5"
        android:layout_column="0"
        android:textColor="@color/colorNegru"
        android:textStyle="bold"
        android:text="@string/telefon"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editTextTelefon"
        android:layout_row="5"
        android:layout_column="1"
        android:textStyle="italic"
        android:textSize="14dp"
        android:hint="@string/hintTelefon"
        android:inputType="phone"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textViewCategorie"
        android:layout_marginLeft="10dp"
        android:layout_row="6"
        android:layout_column="0"
        android:textColor="@color/colorNegru"
        android:textStyle="bold"
        android:text="@string/categorie"/>


    -<RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/radioGroupCategorie"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp">

    <RadioButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/radioButtonAdulti"
        android:textStyle="bold"
        android:textSize="12dp"
        android:text="@string/radioButonAdulti"/>

    <RadioButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/radioButtonPensionari"
        android:textStyle="bold"
        android:textSize="12dp"
        android:text="@string/radioButonPensionari"/>

    <RadioButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/radioButtonElevi"
        android:textStyle="bold"
        android:textSize="12dp"
        android:text="@string/radioButonElevi"/>

</RadioGroup>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:id="@+id/mesajCategorie"
        android:layout_marginLeft="10dp"
        android:layout_row="8"
        android:textStyle="italic"
        android:textSize="12dp"
        android:text="@string/categoriiPersoane"
        android:layout_columnSpan="4"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:id="@+id/textViewDiscount"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_row="9"
        android:layout_column="0"
        android:textColor="@color/colorNegru"
        android:textStyle="bold"
        android:text="@string/discount"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textViewDiscountGenerat"
        android:layout_marginTop="10dp"
        android:layout_row="9"
        android:layout_column="1"
        android:textStyle="italic"
        android:textSize="14dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textViewProcent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_row="9"
        android:layout_column="1"
        android:textColor="@color/colorNegru"
        android:textStyle="italic"
        android:text="@string/procent"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:id="@+id/textViewPretBilet"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_row="10"
        android:layout_column="0"
        android:textColor="@color/colorNegru"
        android:textStyle="bold"
        android:text="@string/pretBilet"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textViewPret"
        android:layout_marginTop="10dp"
        android:layout_row="10"
        android:layout_column="1"
        android:textStyle="italic"
        android:textSize="14dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textViewLei"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_row="10"
        android:layout_column="1"
        android:textColor="@color/colorNegru"
        android:textStyle="italic"
        android:text="@string/lei"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textViewFacilitati"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_row="11"
        android:layout_column="0"
        android:textColor="@color/colorNegru"
        android:textStyle="bold"
        android:text="@string/facilitati"/>

    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/checkBoxTaxaFoto"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:textSize="12dp"
        android:text="@string/taxaFoto"/>

    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/checkBoxTaxaVideo"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:textSize="12dp"
        android:text="@string/taxaVideo"/>

    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/checkBoxGhidAudio"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:textSize="12dp"
        android:text="@string/ghidAudio"/>

    <TextView android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:id="@+id/textViewTotal"
        android:layout_marginLeft="10dp"
        android:layout_row="15"
        android:layout_column="0"
        android:textColor="@color/colorNegru"
        android:textStyle="bold"
        android:text="@string/total"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textViewTotalPlata"
        android:layout_row="15"
        android:layout_column="1"
        android:textStyle="italic"
        android:textSize="14dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textViewLei2"
        android:layout_marginLeft="30dp"
        android:layout_row="15"
        android:layout_column="1"
        android:textColor="@color/colorNegru"
        android:textStyle="italic"
        android:text="@string/lei"
        android:layout_marginRight="90dp"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:id="@+id/textViewDataRezervare"
        android:layout_row="16"
        android:layout_column="0"
        android:textColor="@color/colorNegru"
        android:textStyle="bold"
        android:text="@string/Data"
        android:layout_margin="10dp"/>

    <DatePicker
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/datePicker"
        android:layout_marginLeft="15dp"
        android:layout_row="17"
        android:layout_columnSpan="4"
        android:calendarTextColor="@color/colorNegru"
        android:headerBackground="@color/colorDatePicker"/>

    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/checkBoxTermeni"
        android:layout_marginLeft="30dp"
        android:layout_row="18"
        android:textStyle="italic"
        android:textSize="12dp"
        android:text="@string/checkBoxTermeni"
        android:layout_columnSpan="4"/>

    <Button
        android:background="@drawable/button"
        android:layout_height="50dp"
        android:layout_width="wrap_content"
        android:id="@+id/cumparaButon"
        android:layout_marginTop="10dp"
        android:layout_row="19"
        android:textColor="@color/colorNegru"
        android:textStyle="bold"
        android:text="@string/Cumpara"
        android:layout_columnSpan="4"/>

    <Button
        android:background="@drawable/button"
        android:layout_height="50dp"
        android:layout_width="wrap_content"
        android:id="@+id/genereazaButon"
        android:layout_marginTop="10dp"
        android:layout_row="20"
        android:textColor="@color/colorNegru"
        android:textStyle="bold"
        android:text="@string/Genereaza"
        android:layout_columnSpan="4"/>


</GridLayout>

</ScrollView>